[package]
name = "starry_extension_example"
version = "0.0.1"
description = "Starry extension example"
authors = ["sovlookup"]
license = "MIT"
homepage = "https://github.com/SOVLOOKUP/starry"
repository = "https://github.com/SOVLOOKUP/starry"
documentation = "https://github.com/SOVLOOKUP/starry"
edition = "2021"

[dependencies]
starry_extension_interface =  "0.0.4" 
chrono = "0.4.19"

[lib]
name = "example"
crate-type = ["cdylib"] 
